--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://worknola.com/job/324375/planning--business-consulting-internship'>Planning / Business Consulting Internship | WorkNOLA</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-28</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/MoreGoodFoundation/743999698321213-paid-spring-summer-internship-web-content-writer-15-to-20-hours-per-week'>More Good Foundation PAID SPRING/SUMMER INTERNSHIP - WEB CONTENT WRITER - 15 TO 20 HOURS PER WEEK | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Provo, UT</span></p>
 <p>Posted on: 2019-10-28</p>
@@ -81,11 +85,11 @@
 <p><span class="badge badge-light">Cincinnati, OH</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://polisci.tcnj.edu/internships/'>Internships, Jobs and Opportunities | Department of Political Science</a></h5> 
+<h5><a href='https://polisci.tcnj.edu/internships/'>Internships, Jobs and Opportunities | Department of Political Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://barco.referrals.selectminds.com/jobs/internship-grafisch-vormgever-1276'>Internship: Grafisch vormgever - Barco Careers</a></h5> 
+<h5><a href='https://barco.referrals.selectminds.com/jobs/internship-grafisch-vormgever-1276'>Internship: Grafisch vormgever - Barco Careers</a></h5> 
 <p><span class="badge badge-light">West Flanders, Belgium</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -93,7 +97,7 @@
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698293504-powertrain-systems-intern-commercial-team-starting-january-2020-year-round-'>Bosch Group Powertrain Systems Intern - Commercial Team  (Starting January 2020/Year Round) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698293504-powertrain-systems-intern-commercial-team-starting-january-2020-year-round-'>Bosch Group Powertrain Systems Intern - Commercial Team  (Starting January 2020/Year Round) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -432,7 +436,7 @@ for departmental special projects or reports; basic arithmetic computations;?...
 <p>Oct 16, 2019 ... Our data science interns are considered full time employees by their peers--in 
 fact, you will be expected to contribute right away as a member of our Scrum?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oRK89fwC&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nKqqlMwc'>Palo Alto Networks Careers - Intern - Cloud Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oRK89fwC&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nKqqlMwc'>Palo Alto Networks Careers - Intern - Cloud Software Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -476,10 +480,6 @@ fact, you will be expected to contribute right away as a member of our Scrum?...
 <hr/>
 <h5><a href='https://careers.jobscore.com/careers/albrightstonebridgegroup/jobs/madeleine-albright-inc-internship-spring-2020-auDCgW92Cr6zQXaKiznY58'>Madeleine Albright Inc. Internship (Spring 2020) #0134 job at Albright Stonebridge Group in Washington, DC, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Washington, DCWashington, DC</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/bernie2020/jobs/4486492002'>Job Application for Nevada HQ Intern at Bernie 2020</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
