Bey DevOps Engineer & Unix Administrator | SmartRecruiters. TitanData Inc. Sr. DevOps Engineer | SmartRecruiters. Broadridge Senior DevOps Engineer (Contract) | SmartRecruiters. Job Application for Senior Software Engineer (with DevOps experience) at Punchh. Job Application for DevOps Engineer at Careem. Palo Alto Networks Careers - DevOps SRE Engineer (Information Security). Palo Alto Networks Careers - DevOps SRE Engineer (Information Security). Job @ TwinCap (Zug): IT DevOps IoT / Ref. 106146 | JOIN. ??????(???) DevOps Engineer - MyMusicTaste - Career Page. Playtech Systems Administrator / DevOps | SmartRecruiters. Stellenangebot: Systemadministrator Linux mit Schwerpunkt DevOps (m/w/d) (Erlangen) – dasauge® Stellenmarkt. Job @ Tensor Technologies (Zug): DevOps Engineer | JOIN.     Engineering Manager - DevOps at Srijan Technologies Pvt Ltd .     DevOps Analyst SR at EBANX . NICE Careers - DevOps Engineer - NICE Actimize. Job Application for Project Manager, DevOps at Indigo. Job Application for Senior Engineering Manager, DevOps at Indigo. Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote). Guidewire Software, Inc. Careers - Cloud DevOps. NICE Actimize Careers - Specialist DevOps Engineer. Linkbynet Administrateur Devops H/F | SmartRecruiters. MORI Associates, Inc. Careers - DevOps Systems Administrator - programming/automation - NASA/JPL. InStride - DevOps. Netcentric System Engineer - DevOps | SmartRecruiters. Netcentric System Engineer (DevOps) | SmartRecruiters. Netcentric Senior System Engineer (DevOps) | SmartRecruiters. BlueScope DevOps Developer, Port Kembla or Mascot NSW | SmartRecruiters. BlueScope Senior DevOps Developer, Port Kembla or Mascot NSW | SmartRecruiters. Netcentric System Engineer - DevOps: Senior System Engineer -DevOps | SmartRecruiters. Netcentric System Engineer - DevOps: Junior/Mid System Engineer -DevOps | SmartRecruiters. NICE Actimize Careers - Specialist DevOps Engineer. Job Application for Senior DevOps at Clearmatic

--- a/devops.html
+++ b/devops.html
@@ -38,8 +38,12 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698328588-sr-devops-engineer'>TitanData Inc. Sr. DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698330889-devops-engineer-unix-administrator'>Bey DevOps Engineer & Unix Administrator | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698328588-sr-devops-engineer'>TitanData Inc. Sr. DevOps Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698329213-senior-devops-engineer-contract-'>Broadridge Senior DevOps Engineer (Contract) | SmartRecruiters</a></h5> 
@@ -54,7 +58,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -70,7 +74,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Playtech/743999698278834-systems-administrator-devops'>Playtech Systems Administrator / DevOps | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Playtech/743999698278834-systems-administrator-devops'>Playtech Systems Administrator / DevOps | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -203,7 +207,7 @@
 <p><span class="badge badge-light">Berlin Berlin  Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sagansystems/jobs/1707579'>Job Application for Staff DevOps Engineer, Platform at Gladly</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sagansystems/jobs/1707579'>Job Application for Staff DevOps Engineer, Platform at Gladly</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -243,7 +247,7 @@ of?...</p>
 <p><span class="badge badge-light">Chicago Chicago</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kyivstar/2b5c0218-d07c-4ff8-adfc-cc4fb9cd212c'>Kyivstar - DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kyivstar/2b5c0218-d07c-4ff8-adfc-cc4fb9cd212c'>Kyivstar - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -275,17 +279,17 @@ of?...</p>
 <p><span class="badge badge-light">Toronto, Ontario</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/3dhubs/381e0400-c8c5-4371-b3bc-38f82088f64c'>3D Hubs - DevOps Engineer [Infrastructure Security]</a></h5> 
+<h5><a href='https://jobs.lever.co/3dhubs/381e0400-c8c5-4371-b3bc-38f82088f64c'>3D Hubs - DevOps Engineer [Infrastructure Security]</a></h5> 
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://ebanx.recruiterbox.com/jobs/fk03dkv'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://ebanx.recruiterbox.com/jobs/fk03dkv'>
     DevOps Analyst SR at EBANX
 </a></h5> 
 <p><span class="badge badge-light">Curitiba</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/peak6/jobs/1930358'>Job Application for DevOps Engineer at PEAK6</a></h5> 
+<h5><a href='https://boards.greenhouse.io/peak6/jobs/1930358'>Job Application for DevOps Engineer at PEAK6</a></h5> 
 <p><span class="badge badge-light">Chicago, IL  ?  Chicago</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -406,7 +410,7 @@ strive for the best build and deploy experience that we can offer our developer?
 <p>Oct 13, 2019 ... Job Role: Deployment Manager/DevOps Manager. Years of Experience required: 
 10+ years. Work Location: Gurgaon. Responsibilities: Technical: Manage a?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=s3e5bgwi&__jvsc=Twitter&bid=nix2jMwr'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=s3e5bgwi&__jvsc=Twitter&bid=nix2jMwr'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -446,12 +450,8 @@ strive for the best build and deploy experience that we can offer our developer?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bridgewater89/jobs/4462961002'>Job Application for DevOps Engineer, Disruption Lab at Bridgewater Associates</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bridgewater89/jobs/4462961002'>Job Application for DevOps Engineer, Disruption Lab at Bridgewater Associates</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/tigerconnect/jobs/4485066002'>Job Application for DevOps Engineer Intern at TigerConnect</a></h5> 
-<p><span class="badge badge-light">Santa Monica, CA  Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
 
